--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                             <img src="Kaelan_Couverture expo.jpg" alt="Les Chroniques de Kaelan Valois">
                             <div class="book-overlay">
                                 <div class="book-actions">
-                                    <a href="roman-details.html" class="btn-action">
+                                    <a href="kaelan-details.html" class="btn-action">
                                         <i class="fas fa-book"></i> Lire un extrait
                                     </a>
                                     <a href="kaelan-details.html" class="btn-action">
