--- a/kaelan-details.html
+++ b/kaelan-details.html
@@ -37,9 +37,9 @@
                     </div>
                     
                     <div class="book-meta">
-                        <h2>Croire ou Penser</h2>
+                        <h2>Les Chroniques de Kaelan Valois</h2>
                         <p class="book-author-detail">Mickael T.J.</p>
-                        <p class="book-type-detail">Essai</p>
+                        <p class="book-type-detail">Roman</p>
                         
                         <div class="book-rating-detail">
                             <span class="stars">★★★★★</span>
@@ -81,7 +81,7 @@
                             </tr>
                             <tr>
                                 <td><strong>Date de publication</strong></td>
-                                <td>Sortie prévue début 2026</td>
+                                <td>Prévue début 2026</td>
                             </tr>
                             <tr>
                                 <td><strong>Nombre de pages</strong></td>
