--- a/kaelan-details.html
+++ b/kaelan-details.html
@@ -91,6 +91,10 @@
                                 <td><strong>ISBN</strong></td>
                                 <td>979-10-980569-0-1</td>
                             </tr>
+                            <tr>
+                                <td><strong>Prix en pré-commande</strong></td>
+                                <td>14,90€</td>
+                            </tr>
                         </table>
                         
                         <h3>Mots-clés</h3>
