--- a/kaelan-details.html
+++ b/kaelan-details.html
@@ -114,6 +114,8 @@
                         <p style="display: none;">
                           <label>Ne pas remplir ceci : <input name="bot-field" /></label>
                         </p>
+                        
+                        <input type="hidden" name="_next" value="/croire-ou-penser-details.html?status=success">
 
                         <input type="hidden" name="book_id" value="KaelanValois">
 
