--- a/kaelan-details.html
+++ b/kaelan-details.html
@@ -115,7 +115,7 @@
                           <label>Ne pas remplir ceci : <input name="bot-field" /></label>
                         </p>
                         
-                        <input type="hidden" name="_next" value="/kaelan-details.html?status=success">
+                        <input type="hidden" name="_next" value="kaelan-details.html?status=success">
 
                         <input type="hidden" name="book_id" value="KaelanValois">
 
