--- a/kaelan-details.html
+++ b/kaelan-details.html
@@ -188,5 +188,23 @@
             }
         });
     </script>
+    <footer class="footer">
+    <div class="container">
+        <p>© 2025 Mickaël TJ Auteur. Tous droits réservés.</p>
+        
+        <div class="footer-links">
+            <a href="mentions-legales.html">Mentions Légales</a>
+            <span class="separator">|</span>
+            <a href="cgv.html">Conditions Générales de Vente (CGV)</a>
+            <span class="separator">|</span>
+            <a href="politique-confidentialite.html">Politique de Confidentialité</a>
+        </div>
+        
+        <div class="footer-socials">
+            <a href="#" aria-label="Lien vers Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" aria-label="Lien vers Instagram"><i class="fab fa-instagram"></i></a>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
