--- a/les-silences-de-la-terre-details.html
+++ b/les-silences-de-la-terre-details.html
@@ -145,18 +145,25 @@
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 Mickael TJ - Auteur. Tous droits réservés.</p>
-            <div class="footer-socials">
-                <a href="https://www.facebook.com/mickaeltj" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.instagram.com/mickael_tj/" target="_blank"><i class="fab fa-instagram"></i></a>
-            </div>
-        </div>
-    </footer>
-
     <script src="book-details.js"></script>
+    <footer class="footer">
+    <div class="container">
+        <p>© 2025 Mickaël TJ Auteur. Tous droits réservés.</p>
+        
+        <div class="footer-links">
+            <a href="mentions-legales.html">Mentions Légales</a>
+            <span class="separator">|</span>
+            <a href="cgv.html">Conditions Générales de Vente (CGV)</a>
+            <span class="separator">|</span>
+            <a href="politique-confidentialite.html">Politique de Confidentialité</a>
+        </div>
+        
+        <div class="footer-socials">
+            <a href="#" aria-label="Lien vers Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" aria-label="Lien vers Instagram"><i class="fab fa-instagram"></i></a>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
 
