--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="container">
                 <div class="featured-book-container">
                     <div class="featured-book-image">
-                        <img src="Kaelan_Couverture expo.jpg" alt="Couverture du livre Les Chroniques de Kaelan Valois - Tome 1">
+                        <img src="images/kaelan_couverture_expo.jpg" alt="Couverture du livre Les Chroniques de Kaelan Valois - Tome 1">
                         
                     </div>
                     <div class="featured-book-content">
