--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="books-grid">
                     <div class="book-card" data-category="essai">
                         <div class="book-cover">
-                            <img src="croire-ou-penser.jpg" alt="Croire ou Penser">
+                            <img src="images/croire-ou-penser.jpg" alt="Croire ou Penser">
                             <div class="book-overlay">
                                 <div class="book-actions">
                                     <a href="croire-ou-penser-details.html" class="btn-action">
@@ -114,7 +114,7 @@
 
                     <div class="book-card" data-category="essai">
                         <div class="book-cover">
-                            <img src="les-silences-de-la-terre.jpg" alt="Les silences de la terre">
+                            <img src="images/les-silences-de-la-terre.jpg" alt="Les silences de la terre">
                             <div class="book-overlay">
                                 <div class="book-actions">
                                     <a href="les-silences-de-la-terre-details.html" class="btn-action">
@@ -143,7 +143,7 @@
 
                     <div class="book-card" data-category="roman">
                         <div class="book-cover">
-                            <img src="Kaelan_Couverture expo.jpg" alt="Les Chroniques de Kaelan Valois">
+                            <img src="images/kaelan_couverture_expo.jpg" alt="Les Chroniques de Kaelan Valois">
                             <div class="book-overlay">
                                 <div class="book-actions">
                                     <a href="kaelan-details.html" class="btn-action">
@@ -216,7 +216,7 @@
                     </div>
                     
                     <div class="author-image">
-                        <img src="image10.png" alt="Photo de Mickael TJ, Auteur">
+                        <img src="images/image10.png" alt="Photo de Mickael TJ, Auteur">
                     </div>
                 </div>
             </div>
